--- a/.github/workflows/app-build-avb08-avb.yml
+++ b/.github/workflows/app-build-avb08-avb.yml
@@ -54,7 +54,7 @@ jobs:
         mkdir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
     - name: Build Solution
       run: |
-        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=${{ github.workspace }}/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
     - name: Run pwsh
       shell: pwsh
       run: | 
