--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/App.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -35,18 +35,30 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
-	<appSettings>
-		<!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
-		<add key="BotName" value="sasthana-avbot-sample-01" />
-		<add key="AadAppId" value="1a61a6ca-84c5-4e4c-951c-3ce87ee56e0b" />
-		<add key="AadAppSecret" value="JTJ7Q~Hu2o~9jKtPQchFzBmjlqcpT8pWheWtz" />
-		<add key="H264_1280x720_30Fps" value="output720p.264" />
-		<add key="H264_640x360_30Fps" value="output360p.264" />
-		<add key="H264_320x180_15Fps" value="output180p.264" />
-		<add key="H264_1920X1080_VBSS_15Fps" value="mle1080p15vbss_2500Kbps.264" />
-		<add key="AudioFileLocation" value="downsampled.wav" />
-		<add key="AudioVideoFileLengthInSec" value="70" />
-		<add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/v1.0" />
-	</appSettings>
+  <appSettings>
+    <!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
+    <add key="BotName" value="sasthana-avbot-sample-01" />
+    <add key="AadAppId" value="1a61a6ca-84c5-4e4c-951c-3ce87ee56e0b" />
+    <add key="AadAppSecret" value="JTJ7Q~Hu2o~9jKtPQchFzBmjlqcpT8pWheWtz" />
+    <add key="H264_1280x720_30Fps" value="output720p.264" />
+    <add key="H264_640x360_30Fps" value="output360p.264" />
+    <add key="H264_320x180_15Fps" value="output180p.264" />
+    <add key="H264_1920X1080_VBSS_15Fps" value="mle1080p15vbss_2500Kbps.264" />
+    <add key="AudioFileLocation" value="downsampled.wav" />
+    <add key="AudioVideoFileLengthInSec" value="70" />
+    <add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/v1.0" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
