--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/packages.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="Azure.Core" version="1.18.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Graph.Communications.Common" version="1.2.0.3742" targetFramework="net472" />
   <package id="Microsoft.Graph.Core" version="2.0.5" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.35.1" targetFramework="net472" />
@@ -27,7 +32,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net472" />
   <package id="System.Text.Json" version="5.0.2" targetFramework="net472" />
