--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/.env
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/.env
@@ -5,7 +5,7 @@
 # Remove this comment
 AzureSettings__BotName=Teams AudioVideoPlayback Bot
 AzureSettings__AadAppId=9864a2af-4d45-42d4-a25c-8c90a7c2387a
-AzureSettings__AadAppSecret=UQY7Q~TND62oN9taUOJ_iofSem2GU-SrNE6Gg
+AzureSettings__AadAppSecret=xxxxx
 AzureSettings__ServiceDnsName=avbot01.samarthasthana.com
 AzureSettings__CertificateThumbprint=075840B3313602E52E906B786A24A9A15AB839D7
 AzureSettings__BotCallingInternalPort=9442
