--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/packages.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/packages.config
@@ -6,7 +6,10 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Graph.Communications.Common" version="1.2.0.3742" targetFramework="net472" />
   <package id="Microsoft.Graph.Core" version="2.0.5" targetFramework="net472" />
@@ -18,6 +21,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="6.12.2" targetFramework="net472" />
   <package id="Microsoft.Skype.Bots.Media" version="1.20.0.348-alpha" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NLog" version="4.7.14" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.0.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.0.0" targetFramework="net472" />
