Re running the pipeline, commented logger

--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/AVPWindowsService.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/AVPWindowsService/AVPWindowsService.csproj
@@ -259,6 +259,7 @@
     </None>
     <None Include=".env-template" />
     <None Include="App.config" />
+    <None Include="nlog.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
