--- a/.github/workflows/TeamsVoiceEchoBot/app-infra-release-MSGWW.yml
+++ b/.github/workflows/TeamsVoiceEchoBot/app-infra-release-MSGWW.yml
@@ -5,15 +5,15 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
   push:
-    branches: [ main ]
+    branches: [ bcage29/TeamsVoiceEchoBot ]
     paths:
       - ADF/**
-      - .github/workflows/app-infra-release-MSGWW.yml
+      - .github/workflows/TeamsVoiceEchoBot/app-infra-release-MSGWW.yml
   pull_request:
-    branches: [ main ]
+    branches: [ bcage29/TeamsVoiceEchoBot ]
     paths:
       - ADF/**
-      - .github/workflows/app-infra-release-MSGWW.yml
+      - .github/workflows/TeamsVoiceEchoBot/app-infra-release-MSGWW.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
