--- a/.github/workflows/app-build-MSGWW.yml
+++ b/.github/workflows/app-build-MSGWW.yml
@@ -6,12 +6,12 @@ on:
   push:
     branches: [ bcage29/TeamsVoiceEchoBot ]
     paths:
-      - ./Samples/PublicSamples/EchoBot/EchoBot/**
+      - ./Samples/PublicSamples/EchoBot/src/**
       - .github/workflows/app-build-MSGWW.yml
   pull_request:
     branches: [ bcage29/TeamsVoiceEchoBot ]
     paths:
-      - ./Samples/PublicSamples/EchoBot/EchoBot/**
+      - ./Samples/PublicSamples/EchoBot/src/**
       - .github/workflows/app-build-MSGWW.yml
 
 env:
@@ -48,14 +48,14 @@ jobs:
       run: | 
         echo "${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/"
     - uses: nuget/setup-nuget@v1
-    - run: nuget restore Samples\PublicSamples\EchoBot\EchoBot\EchoBot.sln
+    - run: nuget restore Samples\PublicSamples\EchoBot\src\EchoBot.sln
     
     - name: Create Build Directory
       run: mkdir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
     
     - name: Build Solution
       run: |
-        msbuild.exe Samples\PublicSamples\EchoBot\EchoBot\EchoBot.sln /nologo /p:platform="x64" /p:OutDir=../${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        msbuild.exe Samples\PublicSamples\EchoBot\src\EchoBot.sln /nologo /p:platform="x64" /p:OutDir=${{ github.workspace }}/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
         
     - name: Run pwsh
       shell: pwsh
@@ -72,13 +72,13 @@ jobs:
       uses: Azure/powershell@v1
       with:
         inlineScript: |
-          Get-ChildItem -Path $env:GITHUB_WORKSPACE # -Recurse
+          Get-ChildItem -Path  ./${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/ # -Recurse
 
           $Params = @{
             App           = 'BOT'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
+            BasePath      = $env:Base
             OrgName       = $env:OrgName
             Location      = $env:location
           }
@@ -96,7 +96,7 @@ jobs:
             App           = 'BOT'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
+            BasePath      = $env:Base
             OrgName       = $env:OrgName
             Location      = $env:location
             Environment   = $env:Environment
