updated build path

--- a/.github/workflows/app-build-MSGWW.yml
+++ b/.github/workflows/app-build-MSGWW.yml
@@ -55,12 +55,13 @@ jobs:
     
     - name: Build Solution
       run: |
-        msbuild.exe Samples\PublicSamples\EchoBot\src\EchoBot.sln /nologo /p:platform="x64" /p:OutDir=../${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        msbuild.exe Samples\PublicSamples\EchoBot\src\EchoBot.sln /nologo /p:platform="x64" /p:OutDir=${{ github.workspace }}/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
         
     - name: Run pwsh
       shell: pwsh
       run: | 
-        dir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        Get-ChildItem -Path ${{ github.workspace }}\${{ env.Base }}\${{ env.Component }}\${{ env.BuildName }}\
+        echo ${{ github.workspace }}
     
     - name: Login via Az module
       uses: azure/login@v1
@@ -72,13 +73,13 @@ jobs:
       uses: Azure/powershell@v1
       with:
         inlineScript: |
-          Get-ChildItem -Path $env:GITHUB_WORKSPACE # -Recurse
+          Get-ChildItem -Path  ./${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/ # -Recurse
 
           $Params = @{
             App           = 'BOT'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
+            BasePath      = $env:Base
             OrgName       = $env:OrgName
             Location      = $env:location
           }
@@ -96,7 +97,7 @@ jobs:
             App           = 'BOT'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
+            BasePath      = $env:Base
             OrgName       = $env:OrgName
             Location      = $env:location
             Environment   = $env:Environment
