updated infra workflow

--- a/Samples/PublicSamples/EchoBot/ADF/templates/app-infra-release-OrgName.yml
+++ b/Samples/PublicSamples/EchoBot/ADF/templates/app-infra-release-OrgName.yml
@@ -7,13 +7,13 @@ on:
   push:
     branches: [ main ]
     paths:
-      - ADF/**
-      - .github/workflows/TeamsVoiceEhoBot/app-infra-release-{OrgName}.yml
+      - ./Samples/PublicSamples/EchoBot/ADF/**
+      - .github/workflows/app-infra-release-{OrgName}.yml
   pull_request:
     branches: [ main ]
     paths:
-      - ADF/**
-      - .github/workflows/TeamsVoiceEchoBot/app-infra-release-{OrgName}.yml
+      - ./Samples/PublicSamples/EchoBot/ADF/**
+      - .github/workflows/app-infra-release-{OrgName}.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -53,9 +53,7 @@ jobs:
               Location        = $env:location
               FullUpload      = $true
             }
-            ./Samples/PublicSamples/TeamsVoiceEchoBot/ADF/main.ps1 @Params
+            ./Samples/PublicSamples/EchoBot/ADF/main.ps1 @Params
             if ($e){throw $e}
         env:
           VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_{OrgName}_BOT }}
-
-
