--- a/Samples/PublicSamples/EchoBot/ADF/templates/echobot-infra-OrgName.yml
+++ b/Samples/PublicSamples/EchoBot/ADF/templates/echobot-infra-OrgName.yml
@@ -1,26 +1,26 @@
-name: .NET BOT D1 INFRA MSGWW
+name: .NET BOT D1 INFRA {OrgName}
 
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
   push:
-    branches: [ bcage29/TeamsVoiceEchoBot ]
+    branches: [ {BranchName} ]
     paths:
       - ./Samples/PublicSamples/EchoBot/ADF/**
-      - .github/workflows/app-infra-release-MSGWW.yml
+      - .github/workflows/app-infra-release-{OrgName}.yml
   pull_request:
-    branches: [ bcage29/TeamsVoiceEchoBot ]
+    branches: [ {BranchName} ]
     paths:
       - ./Samples/PublicSamples/EchoBot/ADF/**
-      - .github/workflows/app-infra-release-MSGWW.yml
+      - .github/workflows/app-infra-release-{OrgName}.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
-  OrgName: MSGWW
-  Location: eastus2
+  OrgName: {OrgName}
+  Location: {Location}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -28,9 +28,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Support Git Longpaths
-        run: git config --system core.longpaths true
-
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -43,7 +40,7 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_CREDENTIALS_MSGWW_BOT}}
+          creds: ${{secrets.AZURE_CREDENTIALS_{OrgName}_BOT}}
           enable-AzPSSession: true
 
       - name: Deploy_All_Subscription
@@ -59,4 +56,4 @@ jobs:
             ./Samples/PublicSamples/EchoBot/ADF/main.ps1 @Params
             if ($e){throw $e}
         env:
-          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_MSGWW_BOT }}
+          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_{OrgName}_BOT }}
