--- a/.github/workflows/avb-build-avbot3.yml
+++ b/.github/workflows/avb-build-avbot3.yml
@@ -1,4 +1,4 @@
-name: .NET BOT D1 BUILD avbot2
+name: .NET BOT D1 BUILD avbot3
 
 on:
   workflow_dispatch:
@@ -7,12 +7,12 @@ on:
     branches: [ sasthana/dsc-changes ]
     paths:
       - ./Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/**
-      - .github/workflows/avb-build-avbot2.yml
+      - .github/workflows/avb-build-avbot3.yml
   pull_request:
     branches: [ sasthana/dsc-changes ]
     paths:
       - ./Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/**
-      - .github/workflows/avb-build-avbot2.yml
+      - .github/workflows/avb-build-avbot3.yml
 
 env:
   # /home/runner/work/publish
@@ -20,8 +20,8 @@ env:
   Component:   AVB
   BuildName:   0.1.${{ github.run_number }}
   Environment: D1
-  OrgName:     avbot2
-  Location:    eastus
+  OrgName:     avbot3
+  Location:    westus
 
 jobs:
   build:
@@ -69,7 +69,7 @@ jobs:
     - name: Login via Az module
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS_avbot2_BOT }}
+        creds: ${{ secrets.AZURE_CREDENTIALS_avbot3_BOT }}
         enable-AzPSSession: true
 
     - name: G1_RG_UploadArtifacts_to_Blob
