--- a/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Bot\CallHandler.cs" />
     <Compile Include="Bot\ExceptionExtensions.cs" />
     <Compile Include="Http\ExceptionLogger.cs" />
+    <Compile Include="Middleware\ResponseTimeMiddleware.cs" />
     <Compile Include="SampleConstants.cs" />
     <Compile Include="Http\Controllers\DemoController.cs" />
     <Compile Include="Http\Controllers\HttpRouteConstants.cs" />
